<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/home_menu">

    <fragment
        android:id="@+id/home_menu"
        android:name="com.nauval.movieit.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/search_menu"
        android:name="com.nauval.movieit.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:label="@string/favorite"
        app:moduleName="favorite"
        android:id="@+id/favorite_menu"
        android:name="com.nauval.movieit.favorite.FavoriteFragment"
        tools:layout="@layout/fragment_favorite" />
</navigation>